@@ -1,3 +1,8 @@
+0.xx - 20xxxxxx
+===============
+
+- Add uninstall target for libs.
+
 0.14.1 - 20111117
 =================
 
